--- a/volks-fw/Cargo.toml
+++ b/volks-fw/Cargo.toml
@@ -19,7 +19,8 @@ heap = ["base/heap"] # Enables the heap feature in the base crate
 
 [dependencies]
 base = { version = "0.1.0", path = "../base" }
-pc-communications-hal = { version = "0.1.0", path = "../pc-communications-hal" }                                       # base crate is a member in the workspace located at path
+pc-communications-hal = { version = "0.1.0", path = "../pc-communications-hal" }
+data-center = { version = "0.1.0", path = "../data-center" }                                                           # base crate is a member in the workspace located at path
 cortex-m = "^0.7.3"
 cortex-m-rt = { version = "^0.7.0", features = ["device"] }
 cortex-m-rtic = { version = "0.6.0-rc.4", default-features = false, git = "https://github.com/rtic-rs/cortex-m-rtic" }
