Added initial implementation of high level driver for the ADS1299 device.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [workspace]
 
-members = ["base", "volks-fw", "pc-communications-hal", "data-center"]
+members = [
+    "base",
+    "volks-fw",
+    "pc-communications-hal",
+    "data-center",
+    "ads1299",
+]
 
 [profile.release]
 codegen-units = 1 # Better optimizations
