Project now working in dev container in Linux. updated packages to the latest. commented out data-center as this was causing a hardfault.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "servertype": "openocd",
             "cwd": "${workspaceRoot}",
             "preLaunchTask": "Cargo Build (debug)",
-            "runToMain": true,
+            "showDevDebugOutput": "parsed",
+            "runToEntryPoint": "main",
             "executable": "./target/thumbv7em-none-eabihf/debug/volks-fw",
             "device": "nRF52840_xxAA",
             "interface": "swd",
