--- a/volks-fw/Cargo.toml
+++ b/volks-fw/Cargo.toml
@@ -20,15 +20,15 @@ heap = ["base/heap"] # Enables the heap feature in the base crate
 [dependencies]
 base = { version = "0.1.0", path = "../base" }
 pc-communications-hal = { version = "0.1.0", path = "../pc-communications-hal" }
-data-center = { version = "0.1.0", path = "../data-center" }
-ads1299 = { version = "0.1.0", path = "../ads1299" }                                                                   # base crate is a member in the workspace located at path
-cortex-m = "^0.7.3"
-cortex-m-rt = { version = "^0.7.0", features = ["device"] }
-cortex-m-rtic = { version = "0.6.0-rc.4", default-features = false, git = "https://github.com/rtic-rs/cortex-m-rtic" }
+#data-center = { version = "0.1.0", path = "../data-center" }
+ads1299 = { version = "0.1.0", path = "../ads1299" }            # base crate is a member in the workspace located at path
+cortex-m = "^0.7.4"
+cortex-m-rt = { version = "^0.7.1", features = ["device"] }
+cortex-m-rtic = { version = "1.0.0", default-features = false }
 embedded-hal = { version = "^0.2.6", features = ["unproven"] }
-nrf52840-hal = { version = "^0.14.0", features = ["rt"] }
+nrf52840-hal = { version = "^0.14.1", features = ["rt"] }
 rtt-target = { version = "^0.3.1", features = ["cortex-m"] }
-systick-monotonic = "0.1.0-rc.2"
+systick-monotonic = "1.0.0"
 nrf52840-pac = "0.10.1"
-usb-device = "0.2.7"
-usbd-serial = "0.1.0"
+usb-device = "0.2.8"
+usbd-serial = "0.1.1"
